--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,17 +6,22 @@
         "es2021": true
     },
     "extends": [
-        "airbnb-base", "eslint:recommended", "prettier"
+        "airbnb-base",
+        "airbnb-typescript/base",
+        "eslint:recommended",
+        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module"
+        "sourceType": "module",
+        "project": "./tsconfig.json"
     },
-    "plugins": [
-        "@typescript-eslint", "prettier"
-    ],
+    "plugins": ["@typescript-eslint", "prettier"],
     "rules": {
-        "prettier/prettier": "warn"
+        "import/prefer-default-export": "off",
+        "no-plusplus": "off",
+        "prettier/prettier": "warn",
+        "no-underscore-dangle": "off"
     }
 }
