--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
+        "@types/react": "^17.0.39",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "@typescript-eslint/parser": "^5.10.1",
         "babel-loader": "^8.2.3",
@@ -39,7 +40,9 @@
         "eslint-plugin-prettier": "^4.0.0",
         "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.5.0",
+        "i": "^0.3.7",
         "mini-css-extract-plugin": "^2.5.3",
+        "npm": "^8.5.2",
         "prettier": "^2.5.1",
         "sass": "^1.49.0",
         "sass-loader": "^12.4.0",
