--- a/package.json
+++ b/package.json
@@ -71,10 +71,13 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "clean-webpack-plugin": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
     "webpack-merge": "^5.8.0"
   }
 }
