--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.2",
     "@reduxjs/toolkit": "^1.8.0",
     "@types/react-redux": "^7.1.23",
     "clean-webpack-plugin": "^4.0.0",
