--- a/package.json
+++ b/package.json
@@ -1,88 +1,92 @@
 {
-  "name": "full-js-stack",
-  "version": "1.0.0",
-  "description": "",
-  "private": true,
-  "scripts": {
-    "watch": "webpack --watch",
-    "start": "webpack serve --open --config=config/webpack.development.js",
-    "build:development": "webpack --config=config/webpack.development.js",
-    "build:production": "webpack --config=config/webpack.production.js",
-    "stylelint": "stylelint '**/*{.css,.scss}'",
-    "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Law368/full-JS-stack.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Law368/full-JS-stack/issues"
-  },
-  "homepage": "https://github.com/Law368/full-JS-stack#readme",
-  "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@babel/preset-typescript": "^7.16.7",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-interactions": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
-    "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.4.19",
-    "@storybook/testing-library": "^0.0.9",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^5.2.6",
-    "eslint": "^8.8.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.1.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-import-resolver-typescript": "^2.5.0",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "file-loader": "^6.2.0",
-    "i": "^0.3.7",
-    "mini-css-extract-plugin": "^2.5.3",
-    "npm": "^8.5.2",
-    "prettier": "^2.5.1",
-    "sass": "^1.49.0",
-    "sass-loader": "^10.1.1",
-    "style-loader": "^2.0.0",
-    "stylelint": "^14.3.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-prettier": "^2.0.0",
-    "stylelint-scss": "^4.1.0",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.5",
-    "webpack": "^5.67.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.3"
-  },
-  "dependencies": {
-    "@redux-devtools/extension": "^3.2.2",
-    "@reduxjs/toolkit": "^1.8.0",
-    "@types/react-redux": "^7.1.23",
-    "clean-webpack-plugin": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
-    "react-router-dom": "^6.3.0",
-    "redux": "^4.1.2",
-    "redux-thunk": "^2.4.1",
-    "reselect": "^4.1.5",
-    "webpack-merge": "^5.8.0"
-  }
+    "name": "full-js-stack",
+    "version": "1.0.0",
+    "description": "",
+    "private": true,
+    "scripts": {
+        "test": "jest",
+        "watch": "webpack --watch",
+        "start": "webpack serve --open --config=config/webpack.development.js",
+        "build:development": "webpack --config=config/webpack.development.js",
+        "build:production": "webpack --config=config/webpack.production.js",
+        "stylelint": "stylelint '**/*{.css,.scss}'",
+        "stylelint:fix": "stylelint '**/*{.css,.scss}' --fix",
+        "storybook": "start-storybook -p 6006",
+        "build-storybook": "build-storybook"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Law368/full-JS-stack.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Law368/full-JS-stack/issues"
+    },
+    "homepage": "https://github.com/Law368/full-JS-stack#readme",
+    "devDependencies": {
+        "@babel/core": "^7.17.9",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-typescript": "^7.16.7",
+        "@storybook/addon-actions": "^6.4.19",
+        "@storybook/addon-essentials": "^6.4.19",
+        "@storybook/addon-interactions": "^6.4.19",
+        "@storybook/addon-links": "^6.4.19",
+        "@storybook/preset-scss": "^1.0.3",
+        "@storybook/react": "^6.4.19",
+        "@storybook/testing-library": "^0.0.9",
+        "@types/jest": "^27.4.1",
+        "@types/react": "^17.0.39",
+        "@types/react-dom": "^17.0.13",
+        "@typescript-eslint/eslint-plugin": "^5.10.1",
+        "@typescript-eslint/parser": "^5.10.1",
+        "babel-jest": "^27.5.1",
+        "babel-loader": "^8.2.3",
+        "css-loader": "^5.2.6",
+        "eslint": "^8.8.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^16.1.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-import": "^2.25.4",
+        "eslint-plugin-prettier": "^4.0.0",
+        "file-loader": "^6.2.0",
+        "i": "^0.3.7",
+        "jest": "^27.5.1",
+        "mini-css-extract-plugin": "^2.5.3",
+        "npm": "^8.5.2",
+        "prettier": "^2.5.1",
+        "sass": "^1.49.0",
+        "sass-loader": "^10.1.1",
+        "style-loader": "^2.0.0",
+        "stylelint": "^14.3.0",
+        "stylelint-config-prettier": "^9.0.3",
+        "stylelint-config-rational-order": "^0.1.2",
+        "stylelint-config-standard": "^24.0.0",
+        "stylelint-order": "^5.0.0",
+        "stylelint-prettier": "^2.0.0",
+        "stylelint-scss": "^4.1.0",
+        "ts-loader": "^9.2.6",
+        "typescript": "^4.5.5",
+        "webpack": "^5.67.0",
+        "webpack-cli": "^4.9.2",
+        "webpack-dev-server": "^4.7.3"
+    },
+    "dependencies": {
+        "@redux-devtools/extension": "^3.2.2",
+        "@reduxjs/toolkit": "^1.8.0",
+        "@types/react-redux": "^7.1.23",
+        "clean-webpack-plugin": "^4.0.0",
+        "html-webpack-plugin": "^5.5.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.6",
+        "react-router-dom": "^6.3.0",
+        "redux": "^4.1.2",
+        "redux-thunk": "^2.4.1",
+        "reselect": "^4.1.5",
+        "webpack-merge": "^5.8.0"
+    }
 }
