--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@types/jest": "^27.4.1",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.13",
+        "@types/react-test-renderer": "^18.0.0",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "@typescript-eslint/parser": "^5.10.1",
         "babel-jest": "^27.5.1",
@@ -58,6 +59,7 @@
         "mini-css-extract-plugin": "^2.5.3",
         "npm": "^8.5.2",
         "prettier": "^2.5.1",
+        "react-test-renderer": "^17.0.2",
         "sass": "^1.49.0",
         "sass-loader": "^10.1.1",
         "style-loader": "^2.0.0",
