--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,9 @@
     },
     "settings": {
         "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx", ".ts", ".tsx"]
+            },
             "typescript": {}
         }
     }
