--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "@types/react-redux": "^7.1.23",
         "clean-webpack-plugin": "^4.0.0",
         "html-webpack-plugin": "^5.5.0",
+        "puppeteer": "^13.6.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
