--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "private": true,
     "scripts": {
-        "test": "jest",
+        "test": "jest --coverage",
         "watch": "webpack --watch",
         "start": "webpack serve --open --config=config/webpack.development.js",
         "build:development": "webpack --config=config/webpack.development.js",
