--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.13",
         "@types/react-test-renderer": "^18.0.0",
+        "@types/styled-components": "^5.1.25",
         "@typescript-eslint/eslint-plugin": "^5.10.1",
         "@typescript-eslint/parser": "^5.10.1",
         "babel-jest": "^27.5.1",
@@ -91,6 +92,7 @@
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.1",
         "reselect": "^4.1.5",
+        "styled-components": "^5.3.5",
         "webpack-merge": "^5.8.0"
     }
 }
